@startuml
title Lade Spiel... - Zustandsdiagramm
hide empty description

[*] --> EntryGeladen
state EntryGeladen : HTML Entry geladen: _ghtml_verteiler_puzzle.html
EntryGeladen --> RedirectVorbereiten : enginePath/configPath auslesen
RedirectVorbereiten --> RedirectAusfuehren : window.location.replace/assign
RedirectAusfuehren --> EngineLaden : Zielseite aufrufen
EngineLaden --> DatenLaden : Engine-/Config-Daten laden
DatenLaden --> SpielBereit : Initialisierung abgeschlossen
DatenLaden --> Fehler : Daten nicht ladbar
SpielBereit --> [*] : Steuerung an Ziel-Engine
Fehler --> [*]

note right of RedirectVorbereiten
Quelle: databases/Teil02 FIAE/database/Anforderungen, Analyse, Projekt & Prozess/Protokoll anfertigen _/verteiler_puzzle/_ghtml_verteiler_puzzle.html
enginePath: ../../../../../../game_pages/ConstructionGame/index.html
configPath: _data/_gg01abc1_verteiler_puzzle.json
end note
@enduml
